--- a/4T/ch35.tex
+++ b/4T/ch35.tex
@@ -63,7 +63,7 @@ Javier stutters out, ``Lost.  Carruthers.'' and he grimaces.  His eyes are super
 
 {[}\textit{Challenge 1: Notice.  Agent 1 (Jaya) → Matched}{]}
 
-Jaya feels some weird Jonah-paranoia in the back of her mind, and for some reason it makes her look up.  She sees that the stars in the sky overhead are disappearing.  The sky looks like it is being painted black as a churning darkness draws like a curtain across the sky. \footnote{\textbf{Suko T }The Nothing is coming. \textsubscript{10/23/14 4:43pm}}\footnote{$\rightarrow$\textbf{Rebecca S. }+1 \textsubscript{11/02/14 1:26am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 many times. \textsubscript{11/02/14 1:59am}}
+Jaya feels some weird Jonah-paranoia in the back of her mind, and for some reason it makes her look up.  She sees that the stars in the sky overhead are disappearing.  \hl{The sky looks like it is being painted black as a churning darkness draws like a curtain across the sky.} \footnote{\textbf{Suko T }The Nothing is coming. \textsubscript{10/23/14 4:43pm}}\footnote{$\rightarrow$\textbf{Rebecca S. }+1 \textsubscript{11/02/14 1:26am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 many times. \textsubscript{11/02/14 1:59am}}
 
 {[}\textit{Refresh: Air of Command 2 (Jaya)}{]}  Jaya freaks out and starts shaking Javier and slapping him (with her flesh hand).  ``Get your shit together!  We gotta get out of here!   Get it together!'' yells Jaya, clearly losing her shit herself. The two squads are in complete disarray.
 
@@ -203,7 +203,7 @@ Right in the middle of this, Jaya gets this slightly distracting sense that some
 
 
 
-Back down on the streets, {[}\textit{Refresh: Athletics 3 (Hayley)}{]} Hayley drops Das and \hl{expertly kicks the grenade up into the air}\footnote{\textbf{Suko T }I should take this as a Skill.  She's getting a surprising amount of practice at it. \textsubscript{10/24/14 2:09am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }''Footballer'' \textsubscript{11/02/14 1:23pm}}+1.  It explodes.  Hayley feels a nauseating sense of intense disorientation like when she first connected to Oliver as Agent-Operator.  Hayley says (or thinks she says), ``Oliver!'' with confused delight.  The world goes funny and she loses all sense of up and down.  
+Back down on the streets, {[}\textit{Refresh: Athletics 3 (Hayley)}{]} Hayley drops Das and \hl{expertly kicks the grenade up into the air}\footnote{\textbf{Suko T }I should take this as a Skill.  She's getting a surprising amount of practice at it. \textsubscript{10/24/14 2:09am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }''Footballer'' \textsubscript{11/02/14 1:23pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/03/14 12:07am}}.  It explodes.  Hayley feels a nauseating sense of intense disorientation like when she first connected to Oliver as Agent-Operator.  Hayley says (or thinks she says), ``Oliver!'' with confused delight.  The world goes funny and she loses all sense of up and down.  
 
 Hayley sees a series of images that repeat somewhat haphazardly although the bar scene comes up the most often.
 
@@ -267,7 +267,7 @@ She has this incredible rush of energy, she feels alert and awake.  She grabs Da
 
 Jonah is still in the room.  The agents leave and Riva turns to him.  ``What is wrong?  We were almost out of here.''
 
-The whistling is getting very loud and the action in the mirror is getting very intense.  The mirror seems to be getting even larger, the black reflective surface slowly overflowing the frame.\footnote{\textbf{Rebecca S. }the way this was described made me happy \textsubscript{11/02/14 1:41am}}
+\hl{The whistling is getting very loud and the action in the mirror is getting very intense.  The mirror seems to be getting even larger, the black reflective surface slowly overflowing the frame.}\footnote{\textbf{Rebecca S. }the way this was described made me happy \textsubscript{11/02/14 1:41am}}
 
 ``Why are we here?'' asks Jonah.
 
@@ -515,7 +515,8 @@ Drake continues, ``I recommend keeping your eyes on the prize.  Much as I like g
 
 Drake grips the scruff of Jaya's neck and there's the sensation of being pushed forward, but his grip keeps her from falling.  ``You know, I would hate for you to fall off right now,'' he says, almost conversationally.
 
-\hl{``Yeah!  It would really demonstrate your ability to control a situation,'' Jaya says provokingly.}\footnote{\textbf{Rebecca S. }I just want to say I'm quite proud of myself for this.  Normally get tongue tied trying to come up with snarky/snappy retorts (that don't sound dumb) but I was really happy.  Drake just brings out the quality snark! \textsubscript{11/02/14 1:59am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 Actually threw him, too! \textsubscript{11/02/14 1:30am}}+1
+\hl{``Yeah!  It would really demonstrate your ability to control a situation,'' Jaya says provokingly.}\footnote{\textbf{Rebecca S. }I just want to say I'm quite proud of myself for this.  Normally get tongue tied trying to come up with snarky/snappy retorts (that don't sound dumb) but I was really happy.  Drake just brings out the quality snark! \textsubscript{11/02/14 1:59am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 Actually threw him, too! \textsubscript{11/02/14 1:30am}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/02/14 10:31am}}
+
 
 Drake sighs in annoyance and says darkly,  ``I sincerely hope you make it out of this mission alive.''
 
@@ -811,7 +812,7 @@ we are so fucked \textsubscript{11/02/14 1:10am}}\footnote{$\rightarrow$\textbf{
 
 
 
-\sceneHeadline{The Killing }\footnote{\textbf{Nathaniel Ford }To stay in-theme, which is to say 'Horror Film', this should probably be ``The Killing Fields'' \textsubscript{11/02/14 1:57am}}\footnote{$\rightarrow$\textbf{Suko T }Done! \textsubscript{11/02/14 10:30am}}\textbf{Fields}
+\sceneHeadline{\hl{The Killing} }\footnote{\textbf{Nathaniel Ford }To stay in-theme, which is to say 'Horror Film', this should probably be ``The Killing Fields'' \textsubscript{11/02/14 1:57am}}\footnote{$\rightarrow$\textbf{Suko T }Done! \textsubscript{11/02/14 10:30am}}\textbf{Fields}
 
 Once the door closes behind the boys, Jaya turns and says, ``Hayley, to me.''
 
@@ -866,7 +867,7 @@ The corridor is curved and slopes downward.  It is less curved than the spiralin
 
 ``Be advised that I believe we are being monitored,'' says Jonah.
 
-Douglas points to a door with his katana and Drake opens it.  Behind it is a long corridor.  There are words written on the corridor walls saying, ``TESCO''.  Underneath that it says ``Operation Executive, Terran Educational, Scientific and Cultural Organization''\footnote{\textbf{Rebecca S. }OMG
+Douglas points to a door with his katana and Drake opens it.  Behind it is a long corridor.  There are words written on the corridor walls saying, ``TESCO''.  Underneath that it says \hl{``Operation Executive, Terran Educational, Scientific and Cultural Organization''}\footnote{\textbf{Rebecca S. }OMG
 Such plot reveal! \textsubscript{11/02/14 1:15am}}
 
 In the corridor there are various doors with lights above them in red, green, and blue. Douglas points toward the end of the hallway.  Drake has his gun ready and heads down toward that door.
@@ -892,7 +893,7 @@ There is a surge in the massed horde toward the building.  Hayley notes that som
 
 The attackers aren't mindless, they are helping throw each other up onto the roof and climbing up to get at us.
 
-{[}\textit{Challenge 4. Kill as many people near us as possible without completely compromising the safety of our position.  Sidearm 3 (Jaya) + Snap Reflexes 2 (Hayley) + Bodyguard 2 (Hayley) → Matched}{]}  Jaya pulls out a grenade and goes to drop it on the zombies right below her.  Hayley notices this and realizes that this would just create a pile of dead bodies that would provide a ramp right up to their position.  Before Jaya can even let go of the grenade, Hayley yells at Jaya, ``No! Further!''  Jaya's so surprised, she does as Hayley instructs.  There's an explosion, knocking some of the people back away from the building and \hl{Jaya starts unloading on the crowd, laughing as she does.}\footnote{\textbf{Rebecca S. }It just feels so good when what you're shooting at STAYS DOWN ONCE SHOT.  The relief just makes you giddy. And giggly. And the laughter just flows from there.... and being more powerful than everyone else... and winning \textsubscript{11/02/14 1:32am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Wait for it... \textsubscript{11/02/14 1:50am}}+1  She mows down the people nearest to us, especially the ones that were looking at her.  The crowd is mixed: adults, elderly people, small children.  We shoot them all.
+{[}\textit{Challenge 4. Kill as many people near us as possible without completely compromising the safety of our position.  Sidearm 3 (Jaya) + Snap Reflexes 2 (Hayley) + Bodyguard 2 (Hayley) → Matched}{]}  Jaya pulls out a grenade and goes to drop it on the zombies right below her.  Hayley notices this and realizes that this would just create a pile of dead bodies that would provide a ramp right up to their position.  Before Jaya can even let go of the grenade, Hayley yells at Jaya, ``No! Further!''  Jaya's so surprised, she does as Hayley instructs.  There's an explosion, knocking some of the people back away from the building and \hl{Jaya starts unloading on the crowd, laughing as she does.}\footnote{\textbf{Rebecca S. }It just feels so good when what you're shooting at STAYS DOWN ONCE SHOT.  The relief just makes you giddy. And giggly. And the laughter just flows from there.... and being more powerful than everyone else... and winning \textsubscript{11/02/14 1:32am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Wait for it... \textsubscript{11/02/14 1:50am}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/02/14 10:27am}}  She mows down the people nearest to us, especially the ones that were looking at her.  The crowd is mixed: adults, elderly people, small children.  We shoot them all.
 
 {[}\textit{Challenge 3.  Don't hesitate in killing civilians.  Bad Cop 3 (Jaya) → Matched}{]}
 
@@ -1151,34 +1152,6 @@ Ion: So will Jaya be when we're done with this. \\[4mm]
 
 Rebecca: We just put all the boys in the meatgrinder.
 
-
-
-
-
-
-\iffalse
-
-======================
-THESE ARE ERRORS ENCOUNTERED DURING THE EXPORT PROCESS
-======================
-
-	Unable to highlight for footnote: The Nothing is coming. because:GivenExpectedThe sky looks like it is being painted black as a churning darkness draws like a curtain across the sky.The sky looks like it is being painted black with a churning darkness drawing like a curtain across the sky.
-
-	Unable to understand footnote +1, too many options & none that matched \footnote{$\rightarrow$\textbf{Nathaniel Ford }"Footballer" \textsubscript{11/02/14 1:23pm}}. Optional comment markups: \footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/02/14 10:31am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{11/02/14 2:03am}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/02/14 10:27am}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/03/14 12:07am}}\footnote{$\rightarrow$\textbf{Rebecca S. }+1 \textsubscript{11/02/14 1:26am}} 
-
-	Unable to highlight for footnote: the way this was described made me happy because:GivenExpectedThe mirror seems to be getting even larger, the black reflective surface slowly overflowing the frame.The mirror seems to be getting even larger.
-
-	Unable to understand footnote +1, too many options & none that matched \footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 Actually threw him, too! \textsubscript{11/02/14 1:30am}}. Optional comment markups: \footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/02/14 10:31am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{11/02/14 2:03am}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/02/14 10:27am}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/03/14 12:07am}}\footnote{$\rightarrow$\textbf{Rebecca S. }+1 \textsubscript{11/02/14 1:26am}} 
-
-	Unable to highlight for footnote: To stay in-theme, which is to say 'Horror Film', this should probably be "The Killing Fields", unable to correctly match (exceeded acceptable limit):ExpectedThe Killing Zone
-
-	Unable to highlight for footnote: OMG
-Such plot reveal!, unable to correctly match (exceeded acceptable limit):Expected“Operation Executive, Terran Education Science Culture Organization”
-
-	Unable to understand footnote +1, too many options & none that matched \footnote{$\rightarrow$\textbf{Nathaniel Ford }Wait for it... \textsubscript{11/02/14 1:50am}}. Optional comment markups: \footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/02/14 10:31am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }+1 \textsubscript{11/02/14 2:03am}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/02/14 10:27am}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{11/03/14 12:07am}}\footnote{$\rightarrow$\textbf{Rebecca S. }+1 \textsubscript{11/02/14 1:26am}} 
-
-
-\fi
 
 \vspace{\fill}
 
